gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/info_com_estrutura_passo.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346676326754" ID="ID_714140398" MODIFIED="1346676329564" TEXT="MM">
<node CREATED="1346676330181" ID="ID_938236143" MODIFIED="1346676340721" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346676341261" ID="ID_1727208173" MODIFIED="1346676348090" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1">
<node CREATED="1346676349006" ID="ID_1921778040" MODIFIED="1346676424954" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 3 INFO">
<icon BUILTIN="info"/>
<node CREATED="1346676381607" ID="ID_1769199933" MODIFIED="1346676411327" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 2"/>
</node>
</node>
</node>
</node>
</map>
